# conventional_role_play

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
docs/: Makefile
docs/source/: advanced_usage.md  api.md  conf.py  config.py  index.rst  plugin_guide.md  usage.md
examples/: README.md  basic_usage.py  custom_plugin.py  plugin_system_demo.py  renderer_demo.py  rule_system_demo.py
examples/output/: session_output.html  session_output.json  session_output.md
examples/plugins/: combat_tracker_plugin.py  dice_analyzer_plugin.py
examples/rules/: dnd5e_rules.json5  thulac_rules.json5
src/: lib.rs
src/conventionalrp/: __init__.py  __main__.py  _core.pyi
src/conventionalrp/core/: __init__.py  auto_parser.py  parser.py  processor.py  rules.py  thulac_parser.py
src/conventionalrp/extractors/: __init__.py  base.py  rule_extractor.py
src/conventionalrp/plugins/: __init__.py  base.py  plugin_manager.py
src/conventionalrp/renderers/: __init__.py  base.py  html_renderer.py  json_renderer.py  markdown_renderer.py
src/conventionalrp/utils/: __init__.py  exceptions.py  logging_config.py  visualize_relations.py
src/pyo3_template/: __main__.py
test/: example_rule.json
tests/: README.md  run_tests.py  test_parser.py  test_processor.py  test_pyo3.py  test_renderers.py  test_rule_extractor.py  test_rust_core.py
