[package]
name = "conventionalrp"
version = "0.2.2"
edition = "2021"
description = "HydroRoll Conventional Role Play SDK"
license = "AGPLv3.0"
documentation = "https://{project}.hydroroll.team/"
homepage = "https://crp.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/conventional_role_play"
authors = ["HsiangNianian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset"] }