[package]
name = "conventionalrp"
version = "1.1.3"
edition = "2021"
description = "HydroRoll Conventional Role Play SDK"
license = "AGPLv3.0"
documentation = "https://crp.hydroroll.team/"
homepage = "https://crp.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/conventional_role_play"
authors = ["HsiangNianian"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["abi3-py39"] }
time = { version = "0.3.39", features = ["formatting", "macros", "local-offset"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
